infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth-mongo
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  auth-mongo
        image:  mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
