infra/k8s/tickets-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tickets-mongo-depl
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app:  tickets-mongo
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  tickets-mongo
        image:  mongo
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
